move reset and sort components to solve layout problems

--- a/civictechprojects/static/css/partials/_ProjectSearchSort.scss
+++ b/civictechprojects/static/css/partials/_ProjectSearchSort.scss
@@ -4,4 +4,5 @@
 
 .ProjectSearchSort-sortform {
   padding: 0;
+  border: none;
 }
